--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,15 @@
 {
   "manifest_version": 2,
-  "name": "BridgeBase Dark Theme",
+  "name": "Lichess Zen Plus",
   "version": "0.1",
   "web_accessible_resources": [
     "theme.css"
   ],
   "permissions": [
-    "*://www.bridgebase.com/*"
+    "*://lichess.org/*"
   ],
   "content_scripts": [{
-      "matches": ["*://www.bridgebase.com/*"],
+      "matches": ["*://lichess.org/*"],
       "css": ["theme.css"]
-  }],
-  "browser_specific_settings": {
-    "gecko": {
-      "id": "bridgebase_dark_theme@zolmeister"
-    }
-  }
+  }]
 }
